# estrutura_workshop

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md  load.md
extract/: index.html
load/: index.html
search/: search_index.json
tests/: test_pipeline.py
