[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "estrutura_workshop" }]

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
isort = "^5.12.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.2"
pygments = "^2.16.1"
mkdocs-material = "^9.4.4"
pymdown-extensions = "^10.3"
mkdocs-bootstrap386 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i :8000)"
